parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail53.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail53.json
---
Err(
    ExpectedTokenError {
        expected: [
            Eof,
        ],
        actual: RBrace,
        invalid_row: 1,
        invalid_col: 3,
    },
)
