parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail55.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail55.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            Null,
            LBrace,
            LBracket,
            True,
            False,
        ],
        actual: RBracket,
        invalid_row: 1,
        invalid_col: 4,
    },
)
