parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail60.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail60.json
---
Ok(
    Array(
        [
            Number(
                inf,
            ),
        ],
    ),
)
